Module 2 - Infrastructure Automation/CloudFormation/HelperScripts/cfn-init.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to launch an Ubuntu EC2 instance with httpd using cfn-init

Resources:
  MyEC2Instance:
    Type: AWS::EC2::Instance
    CreationPolicy: 
      ResourceSignal:
        Timeout: PT5M
    Metadata:
      "AWS::CloudFormation::Init":
        configSets:
          setup:
            - install_httpd
        install_httpd:
          packages:
            yum:
              httpd: []
          files:
            "/var/www/html/index.html":
              content: |
                <h1>Hello from Nepal!</h1>
              mode: "000755"
              owner: root
              group: root
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: ami-0dfcb1ef8550277af
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      InstanceType: t2.micro
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            yum update -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource MyEC2Instance --configsets setup --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource MyEC2Instance --region ${AWS::Region}      
      Tags:
        - Key: Name
          Value: MyAppInstance  # Correct the tag key and value format
  
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Enable SSH & HTTP access'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MyAppSG  # Correct the tag key and value format
